; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_hashmap.c_ext2fs_hashmap_add.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_hashmap.c_ext2fs_hashmap_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext2fs_hashmap = type { i64 (i8*, i64)*, i64, %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** }
%struct.ext2fs_hashmap_entry = type { i64, %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry*, i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ext2fs_hashmap_add(%struct.ext2fs_hashmap* %0, i8* %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.ext2fs_hashmap*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.ext2fs_hashmap_entry*, align 8
  store %struct.ext2fs_hashmap* %0, %struct.ext2fs_hashmap** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %11 = load %struct.ext2fs_hashmap*, %struct.ext2fs_hashmap** %5, align 8
  %12 = getelementptr inbounds %struct.ext2fs_hashmap, %struct.ext2fs_hashmap* %11, i32 0, i32 0
  %13 = load i64 (i8*, i64)*, i64 (i8*, i64)** %12, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = load i64, i64* %8, align 8
  %16 = call i64 %13(i8* %14, i64 %15)
  %17 = load %struct.ext2fs_hashmap*, %struct.ext2fs_hashmap** %5, align 8
  %18 = getelementptr inbounds %struct.ext2fs_hashmap, %struct.ext2fs_hashmap* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = urem i64 %16, %19
  store i64 %20, i64* %9, align 8
  %21 = call %struct.ext2fs_hashmap_entry* @malloc(i32 48)
  store %struct.ext2fs_hashmap_entry* %21, %struct.ext2fs_hashmap_entry** %10, align 8
  %22 = load %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %10, align 8
  %23 = icmp ne %struct.ext2fs_hashmap_entry* %22, null
  br i1 %23, label %25, label %24

24:                                               ; preds = %4
  br label %78

25:                                               ; preds = %4
  %26 = load i8*, i8** %6, align 8
  %27 = load %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %10, align 8
  %28 = getelementptr inbounds %struct.ext2fs_hashmap_entry, %struct.ext2fs_hashmap_entry* %27, i32 0, i32 5
  store i8* %26, i8** %28, align 8
  %29 = load i8*, i8** %7, align 8
  %30 = load %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %10, align 8
  %31 = getelementptr inbounds %struct.ext2fs_hashmap_entry, %struct.ext2fs_hashmap_entry* %30, i32 0, i32 4
  store i8* %29, i8** %31, align 8
  %32 = load i64, i64* %8, align 8
  %33 = load %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %10, align 8
  %34 = getelementptr inbounds %struct.ext2fs_hashmap_entry, %struct.ext2fs_hashmap_entry* %33, i32 0, i32 0
  store i64 %32, i64* %34, align 8
  %35 = load %struct.ext2fs_hashmap*, %struct.ext2fs_hashmap** %5, align 8
  %36 = getelementptr inbounds %struct.ext2fs_hashmap, %struct.ext2fs_hashmap* %35, i32 0, i32 4
  %37 = load %struct.ext2fs_hashmap_entry**, %struct.ext2fs_hashmap_entry*** %36, align 8
  %38 = load i64, i64* %9, align 8
  %39 = getelementptr inbounds %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %37, i64 %38
  %40 = load %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %39, align 8
  %41 = load %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %10, align 8
  %42 = getelementptr inbounds %struct.ext2fs_hashmap_entry, %struct.ext2fs_hashmap_entry* %41, i32 0, i32 3
  store %struct.ext2fs_hashmap_entry* %40, %struct.ext2fs_hashmap_entry** %42, align 8
  %43 = load %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %10, align 8
  %44 = load %struct.ext2fs_hashmap*, %struct.ext2fs_hashmap** %5, align 8
  %45 = getelementptr inbounds %struct.ext2fs_hashmap, %struct.ext2fs_hashmap* %44, i32 0, i32 4
  %46 = load %struct.ext2fs_hashmap_entry**, %struct.ext2fs_hashmap_entry*** %45, align 8
  %47 = load i64, i64* %9, align 8
  %48 = getelementptr inbounds %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %46, i64 %47
  store %struct.ext2fs_hashmap_entry* %43, %struct.ext2fs_hashmap_entry** %48, align 8
  %49 = load %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %10, align 8
  %50 = getelementptr inbounds %struct.ext2fs_hashmap_entry, %struct.ext2fs_hashmap_entry* %49, i32 0, i32 1
  store %struct.ext2fs_hashmap_entry* null, %struct.ext2fs_hashmap_entry** %50, align 8
  %51 = load %struct.ext2fs_hashmap*, %struct.ext2fs_hashmap** %5, align 8
  %52 = getelementptr inbounds %struct.ext2fs_hashmap, %struct.ext2fs_hashmap* %51, i32 0, i32 3
  %53 = load %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %52, align 8
  %54 = load %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %10, align 8
  %55 = getelementptr inbounds %struct.ext2fs_hashmap_entry, %struct.ext2fs_hashmap_entry* %54, i32 0, i32 2
  store %struct.ext2fs_hashmap_entry* %53, %struct.ext2fs_hashmap_entry** %55, align 8
  %56 = load %struct.ext2fs_hashmap*, %struct.ext2fs_hashmap** %5, align 8
  %57 = getelementptr inbounds %struct.ext2fs_hashmap, %struct.ext2fs_hashmap* %56, i32 0, i32 3
  %58 = load %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %57, align 8
  %59 = icmp ne %struct.ext2fs_hashmap_entry* %58, null
  br i1 %59, label %60, label %66

60:                                               ; preds = %25
  %61 = load %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %10, align 8
  %62 = load %struct.ext2fs_hashmap*, %struct.ext2fs_hashmap** %5, align 8
  %63 = getelementptr inbounds %struct.ext2fs_hashmap, %struct.ext2fs_hashmap* %62, i32 0, i32 3
  %64 = load %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %63, align 8
  %65 = getelementptr inbounds %struct.ext2fs_hashmap_entry, %struct.ext2fs_hashmap_entry* %64, i32 0, i32 1
  store %struct.ext2fs_hashmap_entry* %61, %struct.ext2fs_hashmap_entry** %65, align 8
  br label %66

66:                                               ; preds = %60, %25
  %67 = load %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %10, align 8
  %68 = load %struct.ext2fs_hashmap*, %struct.ext2fs_hashmap** %5, align 8
  %69 = getelementptr inbounds %struct.ext2fs_hashmap, %struct.ext2fs_hashmap* %68, i32 0, i32 3
  store %struct.ext2fs_hashmap_entry* %67, %struct.ext2fs_hashmap_entry** %69, align 8
  %70 = load %struct.ext2fs_hashmap*, %struct.ext2fs_hashmap** %5, align 8
  %71 = getelementptr inbounds %struct.ext2fs_hashmap, %struct.ext2fs_hashmap* %70, i32 0, i32 2
  %72 = load %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %71, align 8
  %73 = icmp ne %struct.ext2fs_hashmap_entry* %72, null
  br i1 %73, label %78, label %74

74:                                               ; preds = %66
  %75 = load %struct.ext2fs_hashmap_entry*, %struct.ext2fs_hashmap_entry** %10, align 8
  %76 = load %struct.ext2fs_hashmap*, %struct.ext2fs_hashmap** %5, align 8
  %77 = getelementptr inbounds %struct.ext2fs_hashmap, %struct.ext2fs_hashmap* %76, i32 0, i32 2
  store %struct.ext2fs_hashmap_entry* %75, %struct.ext2fs_hashmap_entry** %77, align 8
  br label %78

78:                                               ; preds = %24, %74, %66
  ret void
}

declare dso_local %struct.ext2fs_hashmap_entry* @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
